# petey-app

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.standalone  LICENSE  MODE_MIGRATION.md  Makefile  NOTICE  README.md  TODO  app.py  compare_models.py  docker-compose.yml  extract.py  pyproject.toml  requirements.txt
.github/workflows/: build-desktop.yml  deploy-cloud-run.yml  publish-docker.yml
desktop/: Petey.icns  petey.spec
parser/: Dockerfile  app.py  requirements.txt
petey/: __init__.py  cli.py  extract.py  schema.py
schemas/: catalog.yaml  mci_schema_test.yaml
schemas/irs/: irs_1040.bpt  irs_1040_schedule_a.bpt  irs_1040_schedule_b.bpt  irs_1040_schedule_c.bpt  irs_1040_schedule_d.bpt  irs_1040_schedule_e.bpt  irs_1065.bpt  irs_1099_div.bpt  irs_1099_g.bpt  irs_1099_int.bpt  irs_1099_k.bpt  irs_1099_misc.bpt  irs_1099_nec.bpt  irs_1099_r.bpt  irs_1120.bpt  irs_1120s.bpt  irs_940.bpt  irs_941.bpt  irs_990.bpt  irs_w2.bpt  irs_w4.bpt  irs_w7.bpt  irs_w9.bpt
server/: app.py  auth.py  extract.py  par_extract.py  runs.py  settings.py
static/: dropzone.js  footer.js  logo.html  navbar.js
static/demo/: clinical_schema.bpt  des_moines_schema.bpt  ptr_schema.bpt  tax_roll_schema.yaml
templates/: about.html  blueprint_tutorial.html  builder.html  demos.html  download.html  guide.html  keys.html  par.html  par_debug.html  runs.html  settings.html  settings_advanced.html  template_builder.html
tests/: test_extract.py  test_extract_routing.py  test_parse_client.py  test_parser.py  test_text_mode.py  test_ux_improvements.py
